--- a/views/pages/warehouse/package/list.ejs
+++ b/views/pages/warehouse/package/list.ejs
@@ -74,7 +74,7 @@
                                                         <%= pkg.weight%>
                                                     </td>
                                                     <td>
-                                                        <%= (pkg.pieces || pkg.pieces > -1) ? pkg.pieces : ''%>
+                                                        <%= pkg.awbId.packages.length%>
                                                     </td>
                                                     <td>
                                                         <%= pkg.lastStatusText %>
