--- a/views/pages/customer/no-docs/list.ejs
+++ b/views/pages/customer/no-docs/list.ejs
@@ -9,7 +9,7 @@
         <input type="hidden" name="customer" id="customer" value="<%=createdBy%>">
         <input type="hidden" name="clear" id="clear" value="<%=clear%>">
         <div class="table-responsive">
-        <table id='no-docs-table' class='display table table-striped table-hover dataTable'>
+        <table id='no-docs-table' class='display table table-striped table-hover'>
           <thead>
             <tr>
               <th>Customer First Name</th>
@@ -47,7 +47,7 @@
                 <a 
                 class="btn btn-link btn-primary btn-print-awb" 
                 data-toggle="modal" 
-                data-id="<%=awb._id%>"
+                data-id="<%=awb.awbId._id%>"
                 data-target="#print-popup"><i class="fa fa-print"></i> </a>
               </td>
             </tr>
