--- a/views/pages/admin/invoice/list.ejs
+++ b/views/pages/admin/invoice/list.ejs
@@ -17,6 +17,7 @@
         <div class="card-title"><%= title %></div>
 
       </div> -->
+      <div id="myLoader"><img src="../../../img/preloader.gif"></div>
       <div class="card-body daterangepickerbody">
         <input type="hidden" name="clear" id="clear" value="<%=clear%>">
         <div class="tab-content m-4" id="awb-list-tabContent">
