--- a/views/pages/admin/user/list.ejs
+++ b/views/pages/admin/user/list.ejs
@@ -6,6 +6,7 @@
         <div class="card-title">System Users</div>
         <a href='create' class='btn btn-primary btn-round float-right ml-md-auto'>Add User</a>
       </div>
+      <div id="myLoader"><img src="../../../img/preloader.gif"></div>
       <div class="card-body daterangepickerbody">
         <input type="hidden" name="clear" id="clear" value="<%=clear%>">
         <div class="table-responsive">
