--- a/views/pages/fleet/pilot/create.ejs
+++ b/views/pages/fleet/pilot/create.ejs
@@ -3,6 +3,7 @@
   <div class="card-header">
     <div class="card-title"><%=title%></div>
   </div>
+  <div id="myLoader"><img src="../../../img/preloader.gif"></div>
   <form id="add-pilot-form" action="create">
     <div class="card-body">
       <div class="form-group form-show-validation row">
