--- a/views/pages/warehouse/airline/list.ejs
+++ b/views/pages/warehouse/airline/list.ejs
@@ -6,6 +6,7 @@
         <div class="card-title"><%=title%></div>
         <a href='create' class='btn btn-primary btn-round float-right ml-md-auto'>Add Airline</a>
       </div>
+      <div id="myLoader"><img src="../../../img/preloader.gif"></div>
       <div class="card-body daterangepickerbody-1">
         <div class="table-responsive">
           <table id="airlineTable" class="display table table-striped dateRangeFilterTable table-hover">
