--- a/views/pages/warehouse/manifest/preview.ejs
+++ b/views/pages/warehouse/manifest/preview.ejs
@@ -42,6 +42,7 @@
                     <%=title%>
                 </h4>
             </div>
+            <div id="myLoader"><img src="../../../img/preloader.gif"></div>
             <div class="card-body">
                 <h3 class="card-title text-muted">Plane</h3>
                 <div class='row'>
