--- a/views/pages/customer/customerchild/create.ejs
+++ b/views/pages/customer/customerchild/create.ejs
@@ -6,6 +6,7 @@
         <div class="card-header">
           <h4 class="card-title"><%=title%></h4>
         </div>
+        <div id="myLoader"><img src="../../../img/preloader.gif"></div>
         <div class="card-body">
           <div class="row">
             <div class="col-md-6">
