--- a/views/pages/customer/customerchild/list.ejs
+++ b/views/pages/customer/customerchild/list.ejs
@@ -6,6 +6,7 @@
         <div class="card-title"><%=title%></div>
         <a href='/customer/customerchild/<%=createdBy%>/create' class='btn btn-primary btn-round float-right ml-md-auto'>Add Sub Consignee</a>
       </div>
+      <div id="myLoader"><img src="../../../img/preloader.gif"></div>
       <div class="card-body daterangepickerbody">
         <input type="hidden" name="customer" id="customer" value="<%=createdBy%>">
         <input type="hidden" name="clear" id="clear" value="<%=clear%>">
@@ -41,5 +42,5 @@
     </div>
   </div>
 </div>
-
+<% block('scripts').append('<script src="/js/utils.js"></script>')%>  
 <% block('scripts').append('<script src="/js/customer/customerchild/list.js"></script>')%>
