--- a/views/pages/customer/no-docs/list.ejs
+++ b/views/pages/customer/no-docs/list.ejs
@@ -5,6 +5,7 @@
       <div class="card-header">
         <h4 class="card-title"><%=title%></h4>
       </div>
+      <div id="myLoader"><img src="../../../img/preloader.gif"></div>
       <div class="card-body daterangepickerbody">
         <input type="hidden" name="customer" id="customer" value="<%=createdBy%>">
         <input type="hidden" name="clear" id="clear" value="<%=clear%>">
@@ -124,5 +125,5 @@
     </div>
   </div>
 </div>
-
+<% block('scripts').append('<script src="/js/utils.js"></script>')%>
 <% block('scripts').append('<script src="/js/customer/no-docs/list.js"></script>')%>
