--- a/views/pages/fleet/plane/list.ejs
+++ b/views/pages/fleet/plane/list.ejs
@@ -6,6 +6,7 @@
         <div class="card-title"><%= title%></div>
         <a href='create' class='btn btn-primary btn-round ml-md-auto float-right'>Add Plane</a>
       </div>
+      <div id="myLoader"><img src="../../../img/preloader.gif"></div>
       <div class="card-body daterangepickerbody-1">
         <div class="table-responsive">
         <table class="display table table-striped table-hover dateRangeFilterTable dataTable plane-table">
@@ -70,5 +71,5 @@
     </div>
   </div>
 </div>
-
+<% block('scripts').append('<script src="/js/utils.js"></script>')%>
 <% block('scripts').append('<script src="/js/fleet/plane/list.js"></script>')%>
