--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -13,6 +13,7 @@
                 </div>
             </h3>
         </div>
+        <div id="myLoader"><img src="../../../img/preloader.gif"></div>
         <div class="card-body">
           <h3 class="card-title text-muted">Bill Content</h3>
           <div class="row">
