--- a/views/pages/warehouse/cube/list.ejs
+++ b/views/pages/warehouse/cube/list.ejs
@@ -10,6 +10,7 @@
           data-target="#addCube2-popup"
         >Add Cube2</button>        
       </div>
+      <div id="myLoader"><img src="../../../img/preloader.gif"></div>
       <div class="card-body daterangepickerbody">
           <input type="hidden" name="clear" id="clear" value="<%=clear%>">
         <div class="table-responsive">
