--- a/views/pages/warehouse/package/list.ejs
+++ b/views/pages/warehouse/package/list.ejs
@@ -8,6 +8,7 @@
                     </div>
                     <!-- <a href='create' class='btn btn-primary btn-round float-right ml-md-auto'>Add User</a> -->
                 </div>
+                <div id="myLoader"><img src="../../../img/preloader.gif"></div>
                 <div class="card-body daterangepickerbody">
                     <input type="hidden" name="clear" id="clear" value="<%=clear%>">
                     <div class="table-responsive">
