--- a/views/pages/warehouse/price/list.ejs
+++ b/views/pages/warehouse/price/list.ejs
@@ -6,6 +6,7 @@
         <div class="card-title"><%=title%></div>
         <a href='create' class='btn btn-primary btn-round float-right ml-md-auto'>Add Shipper</a>
       </div>
+      <div id="myLoader"><img src="../../../img/preloader.gif"></div>
       <div class="card-body">
         <div class="table-responsive">
           <table id="shipperTable" class="display table dataTable dateRangeFilterTable table-striped table-hover">
