--- a/views/shared/__template.ejs
+++ b/views/shared/__template.ejs
@@ -34,6 +34,7 @@
 		href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css"
 		rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="/assets/css/daterangepicker.css" />
+		<link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body>
