--- a/views/pages/warehouse/delivery/list.ejs
+++ b/views/pages/warehouse/delivery/list.ejs
@@ -13,9 +13,7 @@
                 <div class="card-body daterangepickerbody">
                     <input type="hidden" name="clear" id="clear" value="<%=clear%>">
                     <div class="table-responsive">
-                        <input type="hidden" name="daterange" id="daterange" value="<%=daterange%>">
-                        <input type="hidden" name="clear" id="clear" value="<%=clear%>">
-                    <table class="display table table-striped table-hover  dataTable delivery-table">
+                    <table class="display table table-striped table-hover dateRangeFilterTable dataTable delivery-table">
                         <thead>
                             <tr>
                                 <th>Delivery #</th>
