--- a/views/pages/warehouse/manifest/incoming.ejs
+++ b/views/pages/warehouse/manifest/incoming.ejs
@@ -11,7 +11,7 @@
           <input type="hidden" name="clear" id="clear" value="<%=clear%>">
           <input type="hidden" name="filter" id="filter" value="<%=filter%>">
         <div class="table-responsive">
-        <table class="display table table-striped table-hover dataTable manifest-table">
+        <table class="display table table-striped table-hover dateRangeFilterTable dataTable manifest-table">
           <thead>
             <tr>
               <th>Manifest ID#</th>
