--- a/views/pages/admin/location/list.ejs
+++ b/views/pages/admin/location/list.ejs
@@ -9,9 +9,7 @@
       <div id="myLoader"><img src="../../../img/preloader.gif"></div>
       <div class="card-body daterangepickerbody-1">
         <div class="table-responsive">
-          <input type="hidden" name="daterange" id="daterange" value="<%=daterange%>">
-          <input type="hidden" name="clear" id="clear" value="<%=clear%>">
-        <table class="display table table-striped table-hover dataTable location-table ">
+        <table class="display table table-striped table-hover dateRangeFilterTable  dataTable location-table ">
           <thead>
             <tr>
               <th>Company</th>
@@ -22,7 +20,21 @@
               <th></th>
             </tr>
           </thead>
-          <tbody>            
+          <tbody>
+            <% locations.forEach(location => { %>
+            <tr data-record="<%=location.id%>">
+              <td><%=(location.company && location.company.name) || '' %></td>
+              <td><%=helpers.formatDate(location.createdAt)%></td>
+              <td><%=location.name%></td>
+              <td><%=location.address%></td>
+              <td><%=location.phone%></td>
+              <th>
+                <a href="manage/<%=location.id%>/get"><i class='fas fa-pencil-alt'></i></a>
+                <!-- temporary commenting the code -->
+                <!-- <a href='#' class='rm-location ml-3' data-id='<%=location.id%>'><i class="fas fa-trash"></i></a> -->
+              </th>
+            </tr>
+            <% }) %>
           </tbody>
         </table>
         </div>
