--- a/views/pages/admin/zone/list.ejs
+++ b/views/pages/admin/zone/list.ejs
@@ -9,7 +9,7 @@
       <div id="myLoader"><img src="../../../img/preloader.gif"></div>
       <div class="card-body daterangepickerbody-1">
         <div class="table-responsive">
-        <table class="display table table-striped table-hover dataTable zone-table ">
+        <table class="display table table-striped table-hover dateRangeFilterTable dataTable zone-table ">
           <thead>
             <tr>
               <th>Name</th>
