--- a/views/pages/warehouse/service-type/list.ejs
+++ b/views/pages/warehouse/service-type/list.ejs
@@ -9,9 +9,7 @@
       <div id="myLoader"><img src="../../../img/preloader.gif"></div>
       <div class="card-body daterangepickerbody-1">
         <div class="table-responsive">
-            <input type="hidden" name="daterange" id="daterange" value="<%=daterange%>">
-            <input type="hidden" name="clear" id="clear" value="<%=clear%>">
-          <table id="service-typeTable" class="display dataTable  table table-striped table-hover">
+          <table id="service-typeTable" class="display dataTable dateRangeFilterTable table table-striped table-hover">
             <thead>
               <tr>
                 <!-- <th>ID</th> -->
