--- a/views/pages/warehouse/awb/preview.ejs
+++ b/views/pages/warehouse/awb/preview.ejs
@@ -27,7 +27,7 @@
               F: (242) 377-3587
             </div>
           </div>
-          <div id="myLoader"><img src="../../../img/preloader.gif"></div>
+          <div id="myLoader"><img src="/public/img/preloader.gif"></div>
           <div class="card-body">
             <div class="separator-solid"></div>
             <div class="row">
