remove invoice download on flight pdf

--- a/views/pages/warehouse/manifest/edit.ejs
+++ b/views/pages/warehouse/manifest/edit.ejs
@@ -7,7 +7,7 @@
         <div class="card-header">
           <h4 class="card-title"> Manifest Data Entry</h4>
         </div>
-        <div id="myLoader"><img src="../../../img/preloader.gif"></div>
+        <!-- <div id="myLoader"><img src="../../../img/preloader.gif"></div> -->
         <div class="card-body">
           <ul class="nav nav-pills nav-primary" id="myTab" role="tablist">
             <li class="nav-item">
