--- a/views/pages/fleet/compartment/list.ejs
+++ b/views/pages/fleet/compartment/list.ejs
@@ -8,7 +8,7 @@
         <a href='#' id='show-add' data-target="#add-compartment" data-toggle='modal'
           class='btn btn-primary btn-round ml-md-auto float-right'>Add Compartment</a>
       </div>
-      <div id="myLoader"><img src="../../../img/preloader.gif"></div>
+      <div id="myLoader"><img src="/img/preloader.gif"></div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
         <table class="display table table-striped table-hover dateRangeFilterTable dataTable compartment-table">
