--- a/views/pages/report.ejs
+++ b/views/pages/report.ejs
@@ -19,7 +19,7 @@ var endate = new Date();
           <div class="card-title pd-18 col-md-2">All Awb Status</div>
         </div>
       </div>
-      <div id="myLoader"><img src="../../../img/preloader.gif"></div>
+      <div id="myLoader"><img src="/img/preloader.gif"></div>
       <div class="card-body daterangepickerbody-1">
         <div class="d-flex w-100 d-inline-block py-4 col-xs-10 col-sm-4 float-left ">
           <label class="w-10-rem align-text-bottom">Select Dates : </label>
