--- a/views/pages/store/store-check-in.ejs
+++ b/views/pages/store/store-check-in.ejs
@@ -12,7 +12,7 @@
           </ul>
         </div>
 			</div>
-			<div id="myLoader"><img src="../../../img/preloader.gif"></div>
+			<div id="myLoader"><img src="/img/preloader.gif"></div>
       <div class="card-body daterangepickerbody">
 		<div class="separator-solid"></div>
         <div class="tab-content m-4" id="awb-list-tabContent">
