--- a/views/pages/warehouse/cube/detail.ejs
+++ b/views/pages/warehouse/cube/detail.ejs
@@ -9,7 +9,7 @@
         </div>
         <h4 class="card-title"><%=title%></h4>
       </div>
-      <div id="myLoader"><img src="../../../img/preloader.gif"></div>
+      <div id="myLoader"><img src="/img/preloader.gif"></div>
       <div class="card-body">
         
         <div class='row'>
