--- a/views/pages/warehouse/delivery/preview.ejs
+++ b/views/pages/warehouse/delivery/preview.ejs
@@ -16,7 +16,7 @@
                             <%=delivery.deliveryNum%>
                     </h4>
                 </div>
-                <div id="myLoader"><img src="../../../img/preloader.gif"></div>
+                <div id="myLoader"><img src="/img/preloader.gif"></div>
                 <div class="card-body">
                     <h3 class="card-title text-muted">Delivery Info</h3>
                     <div class="d-flex flex-row">
