--- a/views/pages/warehouse/paid-type/list.ejs
+++ b/views/pages/warehouse/paid-type/list.ejs
@@ -6,7 +6,7 @@
         <div class="card-title"><%=title%></div>
         <a href='create' class='btn btn-primary btn-round float-right ml-md-auto'>Add New Paid Type</a>
       </div>
-      <div id="myLoader"><img src="../../../img/preloader.gif"></div>
+      <div id="myLoader"><img src="/img/preloader.gif"></div>
       <div class="card-body daterangepickerbody-1">
         <div class="table-responsive">
           <table id="paid-typeTable" class="display table dataTable dateRangeFilterTable table-striped table-hover">
