--- a/views/pages/account/change-pass.ejs
+++ b/views/pages/account/change-pass.ejs
@@ -3,7 +3,7 @@
 	<div class="card-header">
 		<div class="card-title"><%= title %></div>
 	</div>
-	<div id="myLoader"><img src="../../../img/preloader.gif"></div>
+	<div id="myLoader"><img src="/img/preloader.gif"></div>
 	<form id="change-pwd-form">
 		<div class="card-body">
 			<div class="form-group form-show-validation row">
