--- a/views/pages/admin/location/create.ejs
+++ b/views/pages/admin/location/create.ejs
@@ -3,7 +3,7 @@
   <div class="card-header">
     <div class="card-title"><%= title %></div>
   </div>
-  <div id="myLoader"><img src="../../../img/preloader.gif"></div>
+  <div id="myLoader"><img src="/img/preloader.gif"></div>
   <form id="add-location-form" method='POST' action='create'>
     <div class="card-body">
       <div class="form-group form-show-validation row">
