--- a/views/pages/fleet/airport/list.ejs
+++ b/views/pages/fleet/airport/list.ejs
@@ -8,7 +8,7 @@
         <div class="card-title"><%=title%></div>
         <a href="create" class="btn btn-primary btn-round float-right ml-md-auto">Add Airport</a>
       </div>
-      <div id="myLoader"><img src="../../../img/preloader.gif"></div>
+      <div id="myLoader"><img src="/img/preloader.gif"></div>
       <div class="card-body daterangepickerbody-1">
         <div class="table-responsive">
           <table id="airportTable" class="display table table-striped dataTable table-hover">
