--- a/views/pages/fleet/plane/create.ejs
+++ b/views/pages/fleet/plane/create.ejs
@@ -3,7 +3,7 @@
   <div class="card-header">
     <div class="card-title"><%=title%></div>
   </div>
-  <div id="myLoader"><img src="../../../img/preloader.gif"></div>
+  <div id="myLoader"><img src="/img/preloader.gif"></div>
   <form id="add-plane-form" action="create">
     <div class="card-body">
       <div class="form-group form-show-validation row">
