--- a/views/pages/warehouse/awb/invoice.ejs
+++ b/views/pages/warehouse/awb/invoice.ejs
@@ -30,7 +30,7 @@
               F: (242) 377-3587
             </div>
           </div>
-          <div id="myLoader"><img src="../../../img/preloader.gif"></div>
+          <div id="myLoader"><img src="/img/preloader.gif"></div>
           <div class="card-body">
             <div class="separator-solid"></div>
             <!-- <div class="row">
