--- a/views/pages/warehouse/manifest/list.ejs
+++ b/views/pages/warehouse/manifest/list.ejs
@@ -6,7 +6,7 @@
         <div class="card-title"><%= title %></div>
         <a href='create' class='btn btn-primary btn-round float-right ml-md-auto'>Create Manifest</a>
       </div>
-      <div id="myLoader"><img src="../../../img/preloader.gif"></div>
+      <div id="myLoader"><img src="/img/preloader.gif"></div>
       <div class="card-body daterangepickerbody">
           <input type="hidden" name="clear" id="clear" value="<%=clear%>">
           <input type="hidden" name="filter" id="filter" value="<%=filter%>">
