--- a/views/pages/warehouse/shipper/list.ejs
+++ b/views/pages/warehouse/shipper/list.ejs
@@ -6,7 +6,7 @@
         <div class="card-title"><%=title%></div>
         <a href='create' class='btn btn-primary btn-round float-right ml-md-auto'>Add Shipper</a>
       </div>
-      <div id="myLoader"><img src="../../../img/preloader.gif"></div>
+      <div id="myLoader"><img src="/img/preloader.gif"></div>
       <div class="card-body daterangepickerbody-1">
         <div class="table-responsive">
           <input type="hidden" name="daterange" id="daterange" value="<%=daterange%>">
