price totalWet and NoOfInvoice

--- a/views/pages/warehouse/awbprice/list-all.ejs
+++ b/views/pages/warehouse/awbprice/list-all.ejs
@@ -224,7 +224,7 @@
                     <label for="TotalWet" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Total Wet</label>
                     <div class="col-lg-8 col-md-8 col-sm-8">
                       <input type="number" class="form-control" id="TotalWet" name="TotalWet" placeholder="TotalWet">
-                      <span id="totalWetSpan"></span>
+                      <!-- <span id="totalWetSpan"></span> -->
                     </div>
                   </div>
                 </div>
