--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
 						</div>
 						<div class="form-group">
 							<label for="password" class="placeholder"><b>Password</b></label>
-							<a href="#" class="link float-right forgot-password">Forget Password ?</a>
+							<!-- <a href="#" class="link float-right forgot-password">Forget Password ?</a> -->
 							<div class="position-relative">
 								<input id="password" placeholder="Password" name="password" type="password" class="form-control"
 									required>
