--- a/views/pages/admin/customerchild/edit.ejs
+++ b/views/pages/admin/customerchild/edit.ejs
@@ -36,6 +36,18 @@
                 value="<%=customer.email%>">
             </div>
           </div>
+          <div class="form-group form-show-validation row">
+            <label for="password" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Password</label>
+            <div class="col-lg-4 col-md-9 col-sm-8">
+              <input type="password" class="form-control" id="password" name="password" placeholder="password">
+            </div>
+          </div>
+          <div class="form-group form-show-validation row">
+            <label for="confirm-password" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Confirm Password</label>
+            <div class="col-lg-4 col-md-9 col-sm-8">
+              <input type="password" class="form-control" id="confirmPassword" name="confirm_password" placeholder="Confirm Password">
+            </div>
+          </div>
         </div>
         <div class="card-action">
           <button type="submit" class="btn btn-primary">Update</button>
