--- a/views/pages/admin/user/edit.ejs
+++ b/views/pages/admin/user/edit.ejs
@@ -46,6 +46,18 @@
             </div>
           </div>
           <div class="form-group form-show-validation row">
+            <label for="password" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Password</label>
+            <div class="col-lg-4 col-md-9 col-sm-8">
+              <input type="password" class="form-control" id="password" name="password" placeholder="password">
+            </div>
+          </div>
+          <div class="form-group form-show-validation row">
+            <label for="confirm-password" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Confirm Password</label>
+            <div class="col-lg-4 col-md-9 col-sm-8">
+              <input type="password" class="form-control" id="confirmPassword" name="confirm_password" placeholder="Confirm Password">
+            </div>
+          </div>
+          <div class="form-group form-show-validation row">
             <label for="userRole" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Select User Permission
               <span class="required-label">*</span></label>
             <div class="col-lg-4 col-md-9 col-sm-8">
