--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -47,7 +47,6 @@
 				</li>
 				<% } %>
 
-				<% if (helpers.checkRole(user.roles, "Admin")) { %>
 				<li class="nav-section">
 					<span class="sidebar-mini-icon">
 						<i class="fa fa-ellipsis-h"></i>
@@ -69,7 +68,7 @@
 				<li class="nav-item <% if (page.includes('/customerchild/')) { %> active <% } %>">
 					<a href="/admin/customerchild/list">
 						<i class="fa fa-user-tie"></i>
-						<p>Sub Customers</p>
+						<p>Sub Consignee</p>
 					</a>
 				</li>
 				<li class="nav-item <% if (page.includes('/locations/')) { %> active <% } %>">
@@ -90,7 +89,6 @@
 						<p>Invoices </p>
 					</a>
 				</li>
-				<% } %>
 
 				<li class="nav-section">
 					<span class="sidebar-mini-icon">
@@ -99,7 +97,6 @@
 					<h4 class="text-section">Warehouse</h4>
 
 				</li>
-				<%if (helpers.checkRole(user.roles, "Admin") || helpers.checkRole(user.roles, "Warehouse Fl")) {%>
 				<li class="nav-item <% if (page.includes('/fll/')) { %> active <% } %>">
 					<a data-toggle="collapse" href="#warehouse-fll">
 						<i class="fas fa-building"></i>
@@ -141,8 +138,6 @@
 						</ul>
 					</div>
 				</li>
-				<% } %>
-				<% if (helpers.checkRole(user.roles, "Admin") || helpers.checkRole(user.roles, "Warehouse NAS")) { %>
 				<li class="nav-item <% if (page.includes('/nas/')) { %> active <% } %>">
 					<a data-toggle="collapse" href="#warehouse-nas">
 						<i class="fas fa-warehouse"></i>
@@ -214,9 +209,7 @@
 						</ul>
 					</div>
 				</li>
-				<% } %>
 				<!-- Store -->
-				<% if (helpers.checkRole(user.roles, "Admin") || helpers.checkRole(user.roles, "Store")) { %>
 				<li class="nav-item">
 					<a data-toggle="collapse" href="#stores">
 						<i class="fas fa-store"></i>
@@ -238,9 +231,7 @@
 						</ul>
 					</div>
 				</li>
-				<% } %>
 				<!-- Fleet -->
-				<% if (helpers.checkRole(user.roles, "Admin") || helpers.checkRole(user.roles, "Warehouse")) { %>
 				<li class="nav-item <% if (page.includes('/fleet/')) { %> active <% } %>">
 					<a data-toggle="collapse" href="#fleet">
 						<i class="fas fa-truck"></i>
@@ -336,14 +327,13 @@
 						<p>Paid Types </p>
 					</a>
 				</li>
-				<% } %>
 
 				<!-- Customer -->
 				<% if (user.roles[0].type == "Customers") { %>
 				<li class="nav-item <% if (page.includes('/customerchild/list')) { %> active <% } %>">
 					<a href="/customer/customerchild/list/<%= user._id %>">
 						<i class="fa fa-user-tie"></i>
-						<p>Sub Customers</p>
+						<p>Sub Consignee</p>
 					</a>
 				</li>
 				<li class="nav-item <% if (page.includes('/package/')) { %> active <% } %>">
