--- a/views/pages/admin/customers/create.ejs
+++ b/views/pages/admin/customers/create.ejs
@@ -24,7 +24,7 @@
               <div class="form-group form-show-validation row">
                 <label for="pmb" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">PMB </label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
-                  <input type="number" class="form-control" id="pmb" name="pmb" placeholder="PMB" value="9000">
+                  <input type="number" class="form-control" id="pmb" name="pmb" placeholder="PMB" value="9000" required>
                 </div>
               </div>
               <div class="form-group form-show-validation row">
@@ -36,8 +36,7 @@
               <div class="form-group form-show-validation row">
                 <label for="firstName" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">First Name </label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
-                  <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name"
-                    required>
+                  <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name">
                 </div>
               </div>
               <div class="form-group form-show-validation row">
@@ -75,7 +74,7 @@
               <div class="form-group form-show-validation row">
                 <label for="location" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Select Location </label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
-                  <select id="location" name="location" class=" form-control ">
+                  <select id="location" name="location" class=" form-control " required>
                     <% locations.forEach(location => { %>
                     <option value='<%=location._id%>'><%=location.name%></option>
                     <% }) %>
