--- a/views/pages/admin/customerchild/edit.ejs
+++ b/views/pages/admin/customerchild/edit.ejs
@@ -16,6 +16,13 @@
             </div>
           </div>
           <div class="form-group form-show-validation row">
+            <label for="pmb" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Parent Place Of Work</label>
+            <div class="col-lg-4 col-md-9 col-sm-8">
+              <input type="text" class="form-control" placeholder="Parent Place Of Work"
+                value="<%= customer.parentCustomer.placeOfWork%>" readonly>
+            </div>
+          </div>
+          <div class="form-group form-show-validation row">
             <label for="firstName" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">First Name</label>
             <div class="col-lg-4 col-md-9 col-sm-8">
               <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name" required
